src/objects/Farmer_Cluster_Meeting__c.object
<CustomObject>
    <description>Object to hold aggregated info of Banana, Coffee and Maize Cluster Meetings for a specific Contact per month</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>3.0 Farmer Cluster Meetings</relationshipLabel>
        <relationshipName>Farmer_Cluster_Meetings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Focus_Farmer__c</fullName>
        <description>The Banana, Coffee or Maize farmer</description>
        <inlineHelpText>The Banana, Coffee or Maize farmer</inlineHelpText>
        <label>Focus Farmer</label>
        <referenceTo>Focus_Farmer__c</referenceTo>
        <relationshipLabel>3.0 Farmer Cluster Meetings</relationshipLabel>
        <relationshipName>Farmer_Cluster_Meetings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>3.0 Farmer Cluster Meeting</label>
    <nameField>
        <displayFormat>FCM{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>3.0 Farmer Cluster Meeting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 Farmer Cluster Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>